--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,75 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+*{
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+   display: flex;
+  align-items: center;
+  justify-items: center;
+}
+
+.container{
+  background-color: #83cbc6;
+  position: absolute;
+  top: 100px;
+  left: 35%;
+  width: 270px;
+  padding: 3px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+}
+@media(max-width: 700px){
+  .container{
+    top: 50px;
+    left: 12%;
+  }
+}
+.result-screen{
+  margin-top: 5px;
+  margin-left: 2px;
+  border: 0px;
+  border-radius: 10px;
+  width: 252px;
+  height: 70px;
+  font-size: 25px;
+  text-align: right;
+}
+.btns{
+  margin: 5px auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(60px auto);
+}
+.btn{
+  border: 0px ;
+  border-radius: 5px;
+  font-size: 20px;
+  padding: 15px;
+  margin: 2px;
+  background-color: white;
+  cursor: pointer;
+  box-shadow: 1px 1px black;
+}
+.form{
+  padding: 5px;
+}
+#equal-btn{
+  grid-column: 3/5;
+  grid-row: 5;
+  background-color: #78d876;
+  color: white;
+}
+#clr-btn{
+  grid-column: 1/3;
+    grid-row: 1;
+    background-color: #b46ee0;
+    color: white;
+}
+#del-btn{
+  background-color: #f86156;
+    color: white;
 }
